welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type int
var nbpas:int = 0;
          ^Variables:9: error: not found: type int
recule(nbpas:int); 
             ^